# csv-schema-inference

./: LICENSE  MANIFEST.in  README.md  _config.yml  setup.cfg
benchmark/: Benchmark.ipynb
csv_columns_types/: inferring.py  schemainference.py
csv_schema_inference/: csv_schema_inference.py
