[metadata]
name = csv-schema-inference
version = 0.0.6
author = Ramses Alexander Coraspe Valdez
author_email = contacto@wittline.com
description = A tool to automatically infer columns data types in .csv files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Wittline/csv-schema-inference
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False